# mind-fuse

./: .editorconfig  .gitattributes  .gitignore  .gitmessage  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  eslint.config.js  go.mod  go.work  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude/output-styles/: architect-mentor.md
.claude/plans/: synchronous-inventing-oasis.md  周边计划.md
.claude/skills/product-strategy-advisor/: SKILL.md
.claude/skills/ui-design-advisor/: SKILL.md
.claude/skills/ux-interaction-designer/: SKILL.md
.cursor/rules/: rule.mdc
.progress/: 2024-12-17-whiteboard-types.md  2025-12-17-whiteboard-types.md  2025-12-22-types-package-completion.md  2025-12-24-document-design.md  2026-01-10-testing-strategy-and-roadmap.md  NEXT_STEPS.md  init.md  theme.md
apps/web/: package.json
docs/: DESIGN_METHODOLOGY.md  DESIGN_METHODOLOGY_IMPROVEMENTS.md  GEOMETRY_VERIFICATION.md  MIRO_DIAGRAMS.md  REACT_BEST_PRACTICES.md  SKILLS.md  Z_ORDER_AND_SORTING.md
