[workspace]
members = [
    "crates/crdt-core",
    "crates/crdt-wasm",
    "crates/ai-layout",
    "crates/geometry",
    "crates/protocol",
    "apps/crdt-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
wasm-bindgen = "0.2"
